# os2

./: gdb_snapshot.py
kernel/: Cargo.toml  Makefile
kernel/src/: bare_bones.rs  debug.rs  main.rs  time.rs
kernel/src/interrupts/: mod.rs  pic.rs  pit.rs
kernel/src/memory/: heap.rs  mod.rs  paging.rs
kernel/src/net/: dma.rs  e1000.rs  mod.rs
kernel/src/processortrace/: mod.rs
kernel/src/sched/: mod.rs  user.rs
kernel/src/snapshot/: mod.rs
kernel/src/userspace/: mod.rs  user.rs
